test/types/records/recursive/concrete-function.good
concrete-function.chpl:7: error: record 'R' cannot contain a recursive field 'x' of type 'R'
